--- a/AT-Javascript/AT03-Ouro/index.html
+++ b/AT-Javascript/AT03-Ouro/index.html
@@ -21,7 +21,7 @@
 
             <input class="button" type="button" value="Calcular" onclick="calcular()" />
 
-            <div id="resultado"></div>
+            <div>Seu IMC é: <span id="resultado"></span></div>
         </div>
 
         <table>
@@ -38,9 +38,9 @@
             </tr>
 
             <tr id="normal">
-                <td class="green">ENTRE 18,5 E 24,9</td>
-                <td class="green">NORMAL</td>
-                <td class="green">0</td>
+                <td>ENTRE 18,5 E 24,9</td>
+                <td>NORMAL</td>
+                <td>0</td>
             </tr>
 
             <tr id="sobrepeso">
