--- a/AT-Javascript/AT05-Ouro/index.html
+++ b/AT-Javascript/AT05-Ouro/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="container">
+            <h2>Caixa eletrônico</h2>
+
+            <div class="input">
+                <label for="valor">Digite o valor para saque:</label>
+                <input type="number" id="valor" />
+
+                <input
+                    class="button"
+                    type="button"
+                    value="Sacar valor"
+                    onclick="sacar()"
+                />
+            </div>
+
+            <p id="resultado">Notas disponíveis: 100, 50, 20 e 10</p>
+
+            <div class="retirada">
+                <p id="retirada"></p>
+                <p id="n100"></p>
+                <p id="n50"></p>
+                <p id="n20"></p>
+                <p id="n10"></p>
+            </div>
+        </div>
+
+        <script src="script.js"></script>
+    </body>
 </html>
